--- a/doc/UserGuide.tex
+++ b/doc/UserGuide.tex
@@ -119,7 +119,7 @@
 -- Version 0.7 --}
 \author{Till Mossakowski\\[1em]
 DFKI Lab Bremen, Bremen, Germany.\\[1em]
-Comments to: hets-devel@tzi.de
+Comments to: hets-devel@informatik.uni-bremen.de
 }
 
 \maketitle
@@ -308,7 +308,7 @@ software (if not already installed on your computer):
 {\small
 \begin{tabular}{|l|l|l|}\hline
 CASL-lib & specification library & \url{http://www.cofi.info/Libraries}\\\hline
-uDraw(Graph) & graph drawing & \url{http://www.tzi.de/uDrawGraph/en/}\\\hline
+uDraw(Graph) & graph drawing & \url{http://www.informatik.uni-bremen.de/uDrawGraph/en/}\\\hline
 Tcl/Tk & graphics widget system & \url{http://www.scriptics.com/software/tcltk/} \\\hline
 SPASS & theorem prover & \texttt{http://spass.mpi-sb.mpg.de/}\\\hline
 \Isabelle & theorem prover & \url{http://www.cl.cam.ac.uk/Research/HVG/Isabelle/}\\\hline
@@ -879,7 +879,7 @@ XML file.
 chooses a translation option. \texttt{TRANS} is a colon-separated list 
 without blanks of one or more from:
 
-\begin{tabular}{|l|l|}\hline
+\begin{tabular}{|l|p{5cm}|}\hline
 CASL2CoCASL &  inclusion \\\hline
 CASL2CspCASL & inclusion \\\hline
 CASL2HasCASL & inclusion \\\hline
@@ -1110,13 +1110,13 @@ to be provided.
 The architecture of \Hets is shown in Fig.~\ref{fig:hets}. 
 
 If your favourite logic is missing in \Hets, please tell us
-(hets-devel@tzi.de). We will take account your feedback when deciding which
+(hets-devel@informatik.uni-bremen.de). We will take account your feedback when deciding which
 logics and proof tools to integrate next into \Hets. Help with
 integration of more logics and proof tools into \Hets is also welcome.
 
 \Hets is mainly maintained by
 Christian Maeder (Christian.Maeder@dfki.de) and Till Mossakowski
-(Till.Mossakowski@dfki.de). The mailing list is \url{hets-devel@tzi.de},
+(Till.Mossakowski@dfki.de). The mailing list is \url{hets-devel@informatik.uni-bremen.de},
 the homepage is
 \url{http://www.informatik.uni-bremen.de/mailman/listinfo/hets-devel}.
 
